2008-03-22  kitone  <kitone@gna.org>

	* src/actions/WaveformRendererGL.cc:
	Fixed when the waveform has changed, the display list need to be update.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	Add check config and load config.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	Connected to the configuration.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	Cleanup.

	* src/actions/WaveformRendererCairo.cc:
	Fix segfault when the renderer doesn't have a waveform.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	Add cairo renderer.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	* src/actions/WaveformRendererGL.cc:
	Move some properties in WaveformRenderer like the colors, display.

	* src/Makefile.am:
	* src/actions/WaveformRendererCairo.cc:
	Add a new waveform renderer using Cairo.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	* src/actions/WaveformRendererGL.cc:
	The renderer has now a function for return the widget.
	Remove the virtual function on_expose_event in WaveformRenderer.

2008-03-18  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/actions/WaveformEditor.cc:
	Improved to the choice of the renderer.
	It can be modified dynamically.

2008-03-18  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	Redisplay when the document has changed.

2008-03-18  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	The signal "configure" is now connected on the waveform frame.
	Now, it doesn't interfere with the renderer.

2008-03-18  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h: